@@ -11,8 +11,10 @@ package org.elasticsearch.common.util;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.TreeMap;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -62,7 +64,7 @@ public class Maps {
         Objects.requireNonNull(value);
         assert checkIsImmutableMap(map, key, value);
         return Stream.concat(map.entrySet().stream().filter(k -> key.equals(k.getKey()) == false), Stream.of(entry(key, value)))
-                .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
+            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
     /**
@@ -85,10 +87,10 @@ public class Maps {
 
     // map classes that are known to be immutable, used to speed up immutability check in #assertImmutableMap
     private static final Set<Class<?>> IMMUTABLE_MAP_CLASSES = Set.of(
-            Collections.emptyMap().getClass(),
-            Collections.unmodifiableMap(new HashMap<>()).getClass(),
-            Map.of().getClass(),
-            Map.of("a", "b").getClass()
+        Collections.emptyMap().getClass(),
+        Collections.unmodifiableMap(new HashMap<>()).getClass(),
+        Map.of().getClass(),
+        Map.of("a", "b").getClass()
     );
 
     private static <K, V> boolean checkIsImmutableMap(final Map<K, V> map, final K key, final V value) {
@@ -135,7 +137,56 @@ public class Maps {
             return false;
         }
         return left.entrySet().stream()
-                .allMatch(e -> right.containsKey(e.getKey()) && Objects.deepEquals(e.getValue(), right.get(e.getKey())));
+            .allMatch(e -> right.containsKey(e.getKey()) && Objects.deepEquals(e.getValue(), right.get(e.getKey())));
     }
 
+    /**
+     * Returns an array where all internal maps and optionally arrays are flattened into the root map.
+     *
+     * For example the map {"foo": {"bar": 1, "baz": [2, 3]}} will become {"foo.bar": 1, "foo.baz.0": 2, "foo.baz.1": 3}. Note that if
+     * maps contains keys with "." or numbers it is possible that such keys will be silently overridden. For example the map
+     * {"foo": {"bar": 1}, "foo.bar": 2} will become {"foo.bar": 1} or {"foo.bar": 2}.
+     *
+     * @param map - input to be flattened
+     * @param flattenArrays - if false, arrays will be ignored
+     * @param ordered - if true the resulted map will be sorted
+     * @return
+     */
+    public static Map<String, Object> flatten(Map<String, Object> map, boolean flattenArrays, boolean ordered) {
+        return flatten(map, flattenArrays, ordered, null);
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Map<String, Object> flatten(Map<String, Object> map, boolean flattenArrays, boolean ordered, String parentPath) {
+        Map<String, Object> flatMap = ordered ? new TreeMap<>() : new HashMap<>();
+        String prefix = parentPath != null ? parentPath + "." : "";
+        for (Map.Entry<String, Object> entry : map.entrySet()) {
+            if (entry.getValue() instanceof Map) {
+                flatMap.putAll(flatten((Map<String, Object>) entry.getValue(), flattenArrays, ordered, prefix + entry.getKey()));
+            } else if (flattenArrays && entry.getValue() instanceof List) {
+                flatMap.putAll(flatten((List<Object>) entry.getValue(), ordered, prefix + entry.getKey()));
+            } else {
+                flatMap.put(prefix + entry.getKey(), entry.getValue());
+            }
+        }
+        return flatMap;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Map<String, Object> flatten(List<Object> list, boolean ordered, String parentPath) {
+        Map<String, Object> flatMap = ordered ? new TreeMap<>() : new HashMap<>();
+        String prefix = parentPath != null ? parentPath + "." : "";
+        for (int i = 0; i < list.size(); i++) {
+            Object cur = list.get(i);
+            if (cur instanceof Map) {
+                flatMap.putAll(flatten((Map<String, Object>) cur, true, ordered, prefix + i));
+            }
+            if (cur instanceof List) {
+                flatMap.putAll(flatten((List<Object>) cur, ordered, prefix + i));
+            } else {
+                flatMap.put(prefix + i, cur);
+            }
+        }
+        return flatMap;
+    }
 }
